# cookiecutter-project

./: .example-cookiecutterrc  README.md  cookiecutter.json  pyproject.toml  requirements-dev.in  requirements.in
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements.yaml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.github/workflows/: default.yml
{{cookiecutter.project_slug}}/Deployment/Ansible/: ansible.cfg
{{cookiecutter.project_slug}}/Deployment/Terraform/AWS/modules/main/: main.tf
{{cookiecutter.project_slug}}/Deployment/Terraform/GCP/environments/production/: main.tf
