[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^3.1.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.0.6"
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
mkdocs = "^1.1.2"
pycodestyle = "^2.7.0"
pylint = "^2.7.2"
tox = "^3.23.0"
yamllint = "^1.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
